After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 130582 - automatic scrolling of lower pane when using arrows when entering a formula
automatic scrolling of lower pane when using arrows when entering a formula
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-01-05 14:57 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Frederic Parrenin 2004-01-05 14:57:58 UTC
Steps to reproduce the bug:
- open a new sheet
- go to e.g. A10 and freeze panes
- scroll down so that A10 is no longer visible in lower pane
- go to A1 and enter "1"
- go to B1 and enter "=-"
- use the left arrow to select A1
=> the lower pane has automatically scrolled.

This behaviour is not very convenient, and does not exist in XL.
Comment 1 Jody Goldberg 2004-01-06 04:02:10 UTC
Damn, this was fixed for normal cursom movement but I forgot to fix rangesel.
Apologies.  The patch will be in 1.2.5